<resources>
    <string name="banner_ad_unit_id">ca-app-pub-6722966527757194/7984855063</string>
    <string name="app_name">불경소리</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="powered">Powered by JP</string>
    <string name="share">공유하기</string>
    <string name="comment">리뷰남기기</string>
    <string name="email">문의하기</string>
    <string name="term">개인정보처리방침</string>
    <string name="etc">불교 이야기</string>
    <string name="etc_info">불교의식</string>
    <string name="etc_lift">불교생활</string>
    <string name="type_text_han">한글</string>
    <string name="type_text_moon">한문</string>
    <string name="type_text_desc">풀이</string>
    <string name="menu_text_size_up">글자 크게</string>
    <string name="menu_text_size_down">글자 작게</string>
    <string name="menu_text_show_han">한글 보기</string>
    <string name="menu_text_show_moon">한문 보기</string>
    <string name="menu_text_show_desc">풀이 보기</string>
    <string name="info1">재(齋)의 원래의 의미는 고대 인도의 철학서인 우파니샤드(Upanisad)에서 유래하는 것으로 재가자가 언행을 조심하고 재계를 잘 지키고 신심을 청정히 하여 지극한 마음으로 부처님과 스님께 공양을 올리는 것을 말한다. 이것이 후일 크게 법회의식으로 확대되어 호국법회에서부터 수륙재(水陸齋), 영산재(靈山齋) 등과 같은 죽은 사람이나 산 사람을 위해 베풀어지는 일체의 모든 법회를 총칭하는 말을 의미하는 것이다.</string>
    <string name="info2">부처님은 사람이 태어나고 병들고 늙고 죽는 사실을 주목하며 사는 것 자체가‘고통〔苦〕’이라고 하셨다.
사는 것 자체가 고통이니 만큼 그 고통에서 표면적으로 벗어나는 방법은 사실상 죽음으로 모든 종교에서는 사후세계를 다루게 된다. 흔히 서양의 기독교를 포함한 종교에서는 사후세계를 천국과 지옥의 세계관으로 이야기하는 것과 마찬가지로 불교에서도 역시 죽은 자의 영혼이 가야할 곳에 대해 주목한다.\n\n죽은 자의 영혼이 평온한 다음 세계로 안전하게 정착하길 바라는 마음에서 기원하는 것이 천도재(薦度齋)로 죽음과 관련된 불교의례를 통칭하기도 한다. 천도재의 천(薦)은 천거함을 의미하고 도(度)는 죽은 영혼이 내생(來生)의 좋은 곳에 다시 태어나는 길을 안내하고 그 방법을 가르쳐 주며 이끌어 줌을 뜻하여 천도란 망자의 영혼을 구제하여 좋은 곳으로 보낸다는 의미이다. 천도재는 이처럼 의미가 넓은 불교의식으로서 사십구재, 수륙재, 영산재 등이 모두 이에 속하는 것이다.\n\n죽은 자의 영혼이 평온한 다음 세계로 안전하게 정착하길 바라는 마음에서 기원하는 것이 천도재(薦度齋)로 죽음과 관련된 불교의례를 통칭하기도 한다. 천도재의 천(薦)은 천거함을 의미하고 도(度)는 죽은 영혼이 내생(來生)의 좋은 곳에 다시 태어나는 길을 안내하고 그 방법을 가르쳐 주며 이끌어 줌을 뜻하여 천도란 망자의 영혼을 구제하여 좋은 곳으로 보낸다는 의미이다. 천도재는 이처럼 의미가 넓은 불교의식으로서 사십구재, 수륙재, 영산재 등이 모두 이에 속하는 것이다.\n\n천도재의 대상이 되는 영가(靈駕)는 망자의 영혼은 없어지지 않고 그대로 남아 업(業)에 따라 이 몸에서 저 몸으로 몸만 바꾸어 환생하면서 끝없이 윤회하는데 이 영혼을 하나의 개체라고 인정하여 불가(佛家)에서 부르는 것이다. 그래서 흔히 ‘영가천도(靈駕薦度)’라고 하는 것이다. 천도재는 진언(眞言)으로 영가를 불러 이승의 미련이나 집착을 끊어 버리라는 내용인 법문(法門)을 들려주고 살아남은 자들의 정성과 선신(善神)의 위신력과 부처님의 가피력으로 왕색극락(往生極樂)토록 안내하고 기원하게 된다. 의식절차에 따라 상주권공재(常住勸供齋)와 각배재(各拜齋)·영산재(靈山齋) 등으로 나뉘는데, 이 중 사십구재로 통용되는 상주권공재가 가장 기본적인 의식이며, 여기에 명부신앙(冥府信仰)에 대한 의례를 더한 것이 각배재이고 영산재는 영산회상의 법회를 상징화하여 행하는 재이다.</string>
    <string name="info3">모든 종교에서는 죽은 이후의 세계를 다룬다.
흔히 기독교를 포함한 서양의 종교에서는 사후세계를 천국과 지옥의 세계관으로 이야기하는 것과 마찬가지로 불교에서도 역시 죽은 자의 영혼이 가야할 곳에 대해 주목한다. 즉 죽은 자의 영혼이 평온한 다음 세계로 안전하게 정착하길 바라는 마음에서 기원하는 것이 천도재(薦度齋)이다.\n\n이러한 천도재는 죽은 자의 영혼을 직접 정하여 이루어지는 특정인을 대상으로 한 재이다. 반면 수륙재(水陸齋)는 그 말에서처럼 ‘물〔水〕’과 ‘육지〔陸〕’의 모든 불특정한 대상을 위시해 행해지는 것이 수륙재이다. 특히 인간뿐만이 아니라 강, 호수, 바다 등의 물과 육지에 머무르는 모든 살아있는 생명체를 대상으로 하는 광범위한 의식이다. 특히 전쟁이 끝나거나 가뭄, 전염병 등으로 인한 어려운 시기에 수륙재가 사설되는데, 이는 영가의 한이 깊음으로 인해서 인간사에 부조화가 왔다는 인식에서 기인한 것이다. 그들에게 수륙재를 지내주면서 다음 생에 부디 극락의 세계에서 탄생하라고 기원해주는 것이다.\n\n수륙재는 중국에서 양(梁)나라 무제(武帝)때부터 비롯되었고, 한국에서는 971년(광종 22)에 수원 갈양사(葛陽寺)에서 혜거국사(惠居國師)가 처음으로 시행하였다는 기록이 전해진다. 수륙재와 관련된 의식의 내용과 방법을 적어놓은 의궤집(儀軌集)은 고려 선종 때 태사국사 최사겸(崔士兼)이 수륙재의 의식절차를 적어놓은 "수륙의문(水陸義文)"을 송나라에서 구해온 것을 계기로, 보제사(寶齋寺)에 수륙당(水陸堂)을 새로 세움으로써 수륙재를 성대히 격식에 맞게 하였다는 기록이 "고려사(高麗史)"에 전해지고 있다. 이어서 더 제대로 갖추어진 의궤집은 세조대왕대에 1464년에 중국으로부터 구해온 것을 계기로 인출하여 수십건을 배포하였다는 기록을 통해 15세기 후반부터는 본격적으로 내용과 방법에 엄연한 절차에 따라 수륙재가 사설되었을 것으로 추정된다.</string>
    <string name="info4">죽은 자의 영혼이 평온한 다음 세계로 안전하게 정착하길 바라는 마음에서 기원하는 불교의식을 총칭하는 천도재(薦度齋)의 종류로는 상주권공재(常住勸供齋)와 각배재(各拜齋)·영산재(靈山齋) 등이 있다.
이 중에서 영산재는 영산작법이라 불리울만큼 규모와 절차가 큰 의례로 석가모니부처님이 영취산에서 설법하던 영산회상(靈山會上)을 상징화한 재(齋)이다. 영산회상을 열어 영혼을 발심시키고, 그에 귀의하게 함으로써 극락왕생하게 한다는 의미를 갖는다.\n\n영산재가 진행되는 절차는 매우 복잡하다. 우선 의식도량을 상징화하기 위해 야외에 영산회상도를 내어 거는 괘불이운(掛佛移運)을 시작으로 괘불 앞에서 찬불의식을 갖는다. 정면 한가운데 걸린 괘불 앞으로 불보살(佛菩薩)을 모시는 상단(上壇), 신중(神衆)을 모시는 중단(中壇), 영가(靈駕)를 모시는 하단(下壇)을 세운다.\n\n그 뒤 영혼을 모셔오는 시련(侍輦), 영가를 대접하는 대령, 영가가 생전에 지은 탐진치(貪瞋痴)의 삼독(三毒)을 씻어내는 관욕(灌浴)이 행해진다. 그리고 공양드리기 전에 의식장소를 정화하는 신중작법(神衆作法)을 한 다음 불보살에게 공양을 드리고 죽은 영혼이 극락왕생하기를 바라는 찬불의례가 뒤를 잇는다. 이렇게 권공의식을 마치면 재를 치르는 사람들의 보다 구체적인 소원을 읊는 축원문이 낭독된다. 이와 같은 본의식이 끝나면 영산재에 참여한 모든 대중들이 다 함께 하는 회향의식이 거행된다.\n\n본의식은 주로 의식승에 의하여 이루어지나, 회향의식은 의식에 참여한 모든 대중이 다 같이 참여하는 특징이 있다. 끝으로 의식에 청했던 대중들을 돌려보내는 봉송의례가 이루어진다. 영산재는 중요무형문화재 제50호로 지정될만큼 그 가치와 보존이 중요한 전통적인 불교의식의 하나이다.</string>
    <string name="info5">예수재는 불가(佛家)의 대부분의 의식이 죽은 자의 명복을 바라는 것과 달리 생전에 산자가 자신이 죽은 후의 안녕을 기원하기 위한 보다 적극적인 불교의식이다.\n\n죽은 지 7일이 일곱 번 지나는 49일째에 지내는 의식인 49재와 같은 대부분의 천도재가 죽은 이를 위한 것이라면, 예수재는 살아 있는 이가 자신의 사후를 위해 미리 준비함으로써 스스로의 마음을 밝히고 보살행을 실천할 것을 서원드리는 아름다운 의례이다.\n\n‘미리 닦아 익힌다’는 예수(預修)란 단어의 어원에서 알 수 있듯이, 생전(生前)이란 말과 더불어 ‘생전예수재(生前豫修齊)’라고 흔히 불리운다. 또한 사후세계의 안녕을 기원하는 것이기 때문에 지장보살이 주관하는 지옥세계의 소의경전인 "예수시왕생칠경(預修十王生七經)"과 관련이 있어 예수시왕생칠재(豫修十王生七齊)라고도 한다.\n\n예수재의 기원은 당나라 때 현장법사가 인도에서 십이생상속(十二生相屬)에 관한 것을 들여온 것을 시작으로 이것이 당나라와 우리나라에 전해져 전통의식으로 자리잡게 되었다. "지장경(地藏經)" 이익존망품(利益存亡品)에는 산 자가 죽은 자를 위한 공덕을 빌어도 죽은 자는 그 공덕의 7분의 1밖에 못 가져가기 때문에 살아서 공덕을 쌓으라는 내용이 있다. 그래서 미리 재를 지낼 필요가 생기게 되었고, 이것이 바로 생전예수재(生前豫修齋)로 발전된 것이라 할 수 있다. 이런 이유에서 생전예수재는 죽음을 맞이하기 전에 자신의 죄를 참회하고 지계(持戒)와 보시를 통한 스스로의 참된 수행과 공덕으로 자신의 미래를 닦아나가는 의례인 만큼 예수재는 수행의 중요성을 강조하는 불교의 특성을 보여준다.\n\n예수재는 재를 치르는 공간인 도량을 구성하는 방법과 절차에 있어서 다른 재와는 차별적인 특징들이 많은 편이다. 대체적인 절차로는 죽은 뒤에 자신이 가져갈 금은전을 준비하고 각 단(壇)을 만들어 장엄하게 꾸미고, 신중작법(神衆作法), 주향공양(呪香供養), 소청(召請) 등 고성염불과 바라춤, 나비춤 등 불교의식이 진행되며 봉송(奉送)으로 이어져 예수재를 마치게 된다.</string>
    <string name="info6">한자로 ‘등을 밝힌다’는 의미의 연등(燃燈)은 부처님을 위해 등을 밝혀 그 공덕을 다하였다는 옛 경전의 내용으로부터 시작된 하나의 불교의식이다.\n\n등을 밝히는 행위는 향을 태우거나 부처님께 좋은 차, 꽃을 공양하는 등과 같이 부처님께 경외감을 표시하고 그 행위로 하여금 공덕을 쌓고자하는 불교의식의 하나로 발전된 것이다.\n\n5세기 중국의 위(魏)나라 때 지어진 『현우경賢愚經)』「빈녀난타품(貧女難陀品)」에는‘난타’라는 가난한 여인이 그녀의 모든 재산을 바쳐 산 기름으로 부처님께 공양한 등이 아침이 되어도 꺼지지 않고 끝까지 밝게 빛났다고 한다. 이것을 본 부처님께서 "이 여인은 등불공양의 공덕(功德)으로 성불(成佛)할 것이다." 라는 말씀과 함께 그녀에게 수기(授記)를 하였다는 내용이 있어 부처님 생존 당시부터 등을 공양하는 풍습이 있었음을 알 수 있다.\n\n한국에서의 연등의 역사를 찾아보면, 신라 경문왕(景文王) 6년(866), 진성여왕(眞聖女王) 4년(890) 각각 정월(正月) 15일에 황룡사(黃龍寺)로 행차하는 중, 연등을 관람하였다는 간등(看燈) 기록이 있다. 또한 불교가 국교였던 고려시대에는 삼국시대부터 행해졌던 연등회(燃燈會)와 팔관회(八關會)가 국가의 주관으로 널리 행해졌음을 알 수 있다. 연등회는 팔관회와 함께 고려의 2대 명절로 정착되었으며 연등도감(燃燈都監)과 팔관보(八關寶)라는 행사주관기구를 두어 주관하였으며 음력 정월 보름이나 2월 보름에 국왕과 온 백성이 풍년을 기원하며 궁궐부터 시골까지 갖가지 화려한 등을 밝히고 잔치를 열고 가무를 즐겼다.\n\n고려 의종(1147-1170)때 백선연이 사월 초파일에 연등회를 시행하였으며, 고종32년(1245)에 최이에 의해 연등행사를 초파일에 시행한 것이 오늘날 사월초파일 연등회에 이르고 있다. 조선조에 들어서는 관청중심의 행사는 중지되었으나 민간에서는 민속행사로 남아 세시풍속으로 전승되었다. 초파일에 앞서서 등을 만들기 위해 아이들이 종이를 잘라 등대에 매달아 기를 만들어 들고 장안을 돌아다니며 쌀이나 돈을 구하여 등 만드는 비용으로 쓰는 호기놀이가 성행하였고 초파일이 되면 집집마다 등대를 높이 세우고 소원하는 등을 만들어 밝혔다. 밤이 되면 장안의 남녀들이 몰려나와 등을 구경하는 관등놀이를 즐겼으며 통금이 해제되는 날이기도 했다. 1955년의 조계사를 중심으로 시내를 도는 제등행렬을 시작으로 지금은 축제의 일환이자 연등회 전통의 보전을 위한 연등축제가 매해 열리고 있다.</string>
    <string name="info7">다비는 죽은 자의 몸을 불태우는 장례법으로 화장(火葬)을 의미한다.\n\n불교가 발생한 인도의 고대어인 산스크리트어로 자피타(Jhapita)라고 하는데 이를 중국이 불교를 받아들이면서 산스크리트어를 소리나는데로 번역해 ‘다비’라고 하게 된 것이다. 화장은 수장(水葬), 토장(土葬), 풍장(風葬) 등과 더불어 인도 고대의 장례법으로 그 중 가장 고귀한 계층의 장례식으로 이용되었다. 고대 인도의 장례법 중의 하나였던 화장이 불교 특유의 장례로 인식된 것은 바로 석가모니부처님의 장례에 다비가 이루어졌기 때문이다.\n\n석가모니부처님의 시신을 태워 나온 사리 등을 팔등분하여 여덟 개의 탑을 세웠다는 근본대탑(根本大塔)의 이야기처럼, 이미 돌아가신 부처님을 대신하여 다비식에서 나온 사리를 신앙화하게 되면서 후일 스님의 다비식에서 나온 사리 역시 중요한 의미를 갖게 되는 것이다.\n\n인간의 죽음과 스님들의 죽음 표현에서는 엄연한 차이가 있다. 흔히 스님이 돌아가시는 것을 원래의 자리로 돌아간다는 입적(入寂) 혹은 열반(涅槃)이라고 표현한다. 불가(佛家)에서는 죽음 자체가 생(生)의 끝이 아니며 다음 생애로 태어나기 위한 일련의 과정이라고 인식한다. 즉, 불교에서는 근본적으로 삶과 죽음을 서로 대립하는 것으로 보지 않는 삶과 죽음이 같다는 생사일여(生死一如)란 철학적 사고가 배어 있다. 그래서 화장이란 단순한 육신을 불태우는 것이 아니라 죽은 자의 남아있는 미혹(迷惑)과 무명(無明)의 티끌을 모두 태운다는 철학적 의미를 뜻한다. 자신의 흔적을 이 생애 남길 필요가 없어 불로서 육신을 태우는 것이 바로 다비식의 불교적 의미인 것이다.\n\n다비식의 내용과 절차는 불교의 의례법규인 "석문의범(釋門儀範)"을 따르나 자세하게 다루고 있진 않아 임종에서부터 입관까지의 절차는 일반 상례와 비슷하나 영결식의 방법만 다를 뿐이다. 그 차례를 살펴보면 주례승은 시신이 다 탈 때까지 서서 독경하며, 유골은 쇄골 한 다음 절에 봉안하고 49재, 100일재(百日齋), 소상(小祥), 대상(大祥)을 지내고 3년상을 치루게 된다. 식의 세부절차로는 개식(開式), 삼귀의례(三歸依禮), 약력보고(略歷報告), 착어(着語), 창혼(唱魂), 헌화(獻花), 독경(讀經), 추도사(追悼辭), 소향(燒香), 사홍서원(四弘誓願), 폐식(閉式) 등의 일반적인 절차를 따른다.</string>
    <string name="info8">다례(茶禮)란 쉽게 말해서 사람 또는 조상이나 신(神), 부처님에게 차를 달여 바치는 예의범절이라고 할 수 있는데, 이러한 다례의 궁중다례, 유가(儒家)의 다례, 불가(佛家)의 다례, 도가(道家)의 다례 등은 의식을 중심으로 하여 의식다례라고도 한다.
 
불가에서의 다례는 부처님에게 여섯가지 공양물, 향·등·차·쌀·과일·꽃 등을 올리는 것을 육법공양(六法供養)이라고 하는데, 이 육법공양 중의 하나인 차를 부처님께 바치는 의식을 기본으로 하여 헌공다례(獻供茶禮)라고도 한다.\n\n차는 언제부터 마시기 시작했는지는 정확히 알 수 없지만, "삼국사기(三國史記)"에서는 선덕여왕(632∼647) 때부터라는 내용으로 보아 적어도 7세기에는 차를 마셨음을 알 수 있다. 또 흥덕왕(828) 때는 중국의 차나무씨를 들여와 지리산에 심어 늘어나는 수요에 충당하였다는 기록이 있다. "삼국유사(三國遺事)" "가락국기(駕洛國記)"에는 661년 신라 문무왕(文武王) 때 가야의 종묘에 시절제사인 다례(茶禮)를 지내는 음식으로서 떡ㆍ과일 등과 함께 차가 놓여졌다는 기록으로 보아 음료로 마셨음을 알 수 있다.차를 마시는 것과 동시에 차를 바치는 우리나라 다례의 기원은 "삼국유사(三國遺事)" 경덕왕(景德王) 충담사(忠談師)조에 신라시대 경덕왕 24년(765년) 충담스님께서 매년 삼짇날(重三之日)과 중구(重九)날에 남산 삼화령의 미륵세존님께 차 공양을 올렸다는 기록이다. 또 같은 책의 "대산오만진신(臺山五萬眞身)" 조에 문수보살에게 차를 공양하였다는 기록도 있다. 중국 백장대사(百丈大師)가 저술한 선종(禪宗)의 수도승들이 지켜야 할 규칙을 모아놓은 "백장청규(百丈淸規)"에 서술된 다례법을 신라의 도의(道義)가 당나라에 유학하고 오면서 전파하였다고도 한다. 이 "백장청규"에는 특정한 인물을 위한 다례인 특위차를 비롯한 불전헌다법이 적혀 있다.</string>
    <string name="life1">불가에서의 생활은 수행(修行)으로 정의된다. 이는 모든 의식주 생활 자체가 수행이라는 개념에서 시작하여 끝난다고 이야기해도 과언이 아니다. 의복 역시 이러한 수행의 개념을 철저히 보여주고 있는 것으로 대표적인 의복이 가사(袈裟)로, 장삼 위에 왼쪽 어깨에서 오른쪽 겨드랑이 아래로 걸쳐 입는다.\n\n원래는 버려진 누더기 옷을 꿰매어 입는 것을 인도에서 받아들인 것이며, 잡색(雜色)으로만 물들여 입도록 한데서 붙여진 산스크리트어 카사야(kasya)를 음역하여 가사라고 부른다. 가사는 잘린 옷감 조각을 이어 만든 것이 인간의 모든 번뇌를 깨트리는 것이라 하여 해탈복(解脫複), 복전의(福田衣)라고도 하며, 가사를 입고 다른 이의 공양을 받거나 다른 이에게 교법(敎法)을 전해주어 다른 이와 함께 복덕(福德)을 받는 것이 마치 밭에서 곡식이 나는 것과 같다하여 전답의(田畓衣)라고도 한다.\n\n하지만 무더운 인도에서 생겨난 가사의 착용만으로는 우리나라의 추위를 견디기 어렵기 때문에 우리나라에서는 승복(僧服)이 생겨나게 되었다. 한편 현대의 의복에 대한 관심 역시 사회적 트렌드에 맞물려 친환경적이고 몸에 자연스런 의복에 관심이 집중되었다. 또한 스님의 수행과 전진을 위한 일종의 맞춤복인 승복은 연한 회색빛으로 염색된 경우가 대부분이다. 승복에 내재된 수행과 정진이라는 의미와 더불어 승복 자체의 천연염색의 친환경적인 요소는 현대를 살아가는 일반인들에겐 충분한 관심의 대상이 되었다.\n\n침염과 날염의 기법으로 섬유에 물을 들이는 일을 염색(染色)이라 한다. 염색은 불교에서 파생된 것이다. 출가자들이 입던 아름답지 않은 흐린 빛깔의 가사 색을 ‘염색’이라 했던 것이 변해 ‘물들이다’는 의미로 사용됐다. 일찍이 부처님은 마하승기율에서 업에 따라 옷을 지어 입을 것을 권하며 5색과 5간색 등의 화려한 색을 지양하고 대신 황적색, 진흙색, 목란색 등 3가지 색으로 물들여 입을 것을 허락한 바 있다. 이렇게 오랜 시간 전부터 사용되던 염색은 19세기에 이르러 인공 합성염료가 만들어지기면서 그 맥이 끊겼다. 하지만 다시 인간은 식물과 동물 또는 흙으로부터 아름다운 색소를 구하며, 자연과 함께 공존하는 삶의 지혜를 이어왔기에 현재에 선 인간은 다시 천연염색을 통해 자연과의 그리고 자신과의 합일점을 찾고자 하는 것이다.\n\n천연염색이란 자연에서 얻은 재료를 사람의 손을 거쳐 원하는 색상을 만들어내 우리 생활 속에 멋과 맛을 한층 더 높이는 역할을 하는 모든 활동이다. 그렇다보니 재료는 자연스럽게 과일이나 야채, 식물 등 자연에서 얻어지는 것들로 사용된다. 자연계의 곳곳에는 우리가 미처 발견하지 못하는 아름다운 빛깔들이 숨어있다. 전통염색은 그 갖가지 자연의 빛깔들을 우리의 생활 속으로 끌어들이는 작업이다. 천연 염색을 통해 사람과 자연이 하나가 되는 도리를 경험할 수 있다. 오늘날의 염색은 과거와 달리 우리의 미적 욕구를 충족시키고, 삶의 질을 고양하기 위한 측면이 더 크다. 특히 한약재를 이용한 전통 염색은 항균효과 등 인체에 유익한 작용을 하기도 한다. 전통 염색을 응용한 생활한복 등이 널리 선보이고, 어린이와 노인, 피부질환자를 위한 황토내의 등 전통 염색을 이용한 대중적인 제품들도 속속 등장하고 있다.</string>
</resources>