<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/main_nav_review"
        android:icon="@drawable/ic_rate_review_black_48dp"
        android:title="@string/comment" />
    <item
        android:id="@+id/main_nav_send"
        android:icon="@drawable/ic_mail_outline_black_48dp"
        android:title="@string/email" />
    <item
        android:id="@+id/main_nav_share"
        android:icon="@drawable/ic_share_black_48dp"
        android:title="@string/share" />

    <item
        android:id="@+id/main_nav_term"
        android:icon="@drawable/ic_find_in_page_black_48dp"
        android:title="@string/term" />


    <item android:title="@string/etc">
        <menu>
            <item
                android:id="@+id/main_nav_info"

                android:title="@string/etc_info" />
            <item
                android:id="@+id/main_nav_lift"

                android:title="@string/etc_lift" />

        </menu>
    </item>

</menu>
