<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <fragment
            android:id="@+id/infomation_adFragment"
            class="com.jp.buddhisms.fragments.AdFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />





            <com.github.ksoichiro.android.observablescrollview.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/infomation_scroll"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_above="@id/infomation_adFragment"
                android:layout_marginBottom="16dp"
                android:layout_alignParentTop="true"
                android:fillViewport="true">

                <LinearLayout
                    android:id="@+id/infomation_body"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:padding="12dp"
                        android:text="재"

                        android:textColor="#ffffff"
                        android:textSize="20dp" />

                    <TextView

                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/whiteround_blackstroke"
                        android:padding="8dp"
                        android:text="@string/info1"
                        android:textColor="@color/secondary_text"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:padding="12dp"
                        android:text="천도재"
                        android:textColor="#ffffff"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/whiteround_blackstroke"
                        android:padding="8dp"
                        android:text="@string/info2"
                        android:textColor="@color/secondary_text"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:padding="12dp"
                        android:text="수륙재"
                        android:textColor="#ffffff"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/whiteround_blackstroke"
                        android:padding="8dp"
                        android:text="@string/info3"
                        android:textColor="@color/secondary_text"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:padding="12dp"
                        android:text="영산재"
                        android:textColor="#ffffff"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/whiteround_blackstroke"
                        android:padding="8dp"
                        android:text="@string/info4"
                        android:textColor="@color/secondary_text"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:padding="12dp"
                        android:text="예수재"
                        android:textColor="#ffffff"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/whiteround_blackstroke"
                        android:padding="8dp"
                        android:text="@string/info5"
                        android:textColor="@color/secondary_text"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:padding="12dp"
                        android:text="연등회"
                        android:textColor="#ffffff"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/whiteround_blackstroke"
                        android:padding="8dp"
                        android:text="@string/info6"
                        android:textColor="@color/secondary_text"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:padding="12dp"
                        android:text="다비식"
                        android:textColor="#ffffff"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/whiteround_blackstroke"
                        android:padding="8dp"
                        android:text="@string/info7"
                        android:textColor="@color/secondary_text"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:padding="12dp"
                        android:text="다례"
                        android:textColor="#ffffff"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/whiteround_blackstroke"
                        android:padding="8dp"
                        android:text="@string/info8"
                        android:textColor="@color/secondary_text"
                        android:textSize="16dp" />
                </LinearLayout>
            </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>


    </RelativeLayout>
    <View
        android:id="@+id/infomation_flexible_space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary" />
    <include layout="@layout/toolbar_actionbar" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="72dp">

        <TextView
            android:id="@+id/infomation_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"

            android:minHeight="?attr/actionBarSize"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="@android:color/transparent" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>