<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="88dp"

    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/row_listview_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginTop="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/row_listview_view_info"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.45"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|bottom"
                        android:text="@string/type_text_han"
                        android:textColor="@color/secondary_text"
                        android:textSize="13dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|bottom"
                        android:text="@string/type_text_moon"
                        android:textColor="@color/secondary_text"
                        android:textSize="13dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|bottom"
                        android:text="@string/type_text_desc"
                        android:textColor="@color/secondary_text"
                        android:textSize="13dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.55"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/row_listview_image_han"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/ic_help_outline_black_48dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/row_listview_image_moon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/ic_help_outline_black_48dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/row_listview_image_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/ic_help_outline_black_48dp" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/row_listview_text_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@id/row_listview_view_info"
                android:gravity="left|center_vertical"
                android:textColor="@color/primary_text"
                android:textSize="16dp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>